--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=0b199fa4a65cfec1f0b18d4363a2bd07
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #zastapiona DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
-DATABASE_URL=mysql://nazwa_uzytkownika:haslo@127.0.0.1:3306/BD
+DATABASE_URL=mysql://symfony:symfony@mysql:3306/symfony
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
